--- a/app/globals.css
+++ b/app/globals.css
@@ -25,3 +25,21 @@ body {
   background: hsl(250, 24%, 9%);
   @apply w-full h-full;
 }
+
+.material-symbols-outlined {
+  font-family: var(--font-family-symbols);
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;
+  line-height: 1;
+  letter-spacing: normal;
+  text-transform: none;
+  display: inline-block;
+  white-space: nowrap;
+  word-wrap: normal;
+  direction: ltr;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
+  font-feature-settings: "liga";
+}
